会社案内追加

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="script.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script defer src="./js/script.js"></script>
   <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
@@ -28,6 +41,73 @@
         </div>
       </div>
     </section>
+
+    <section class="l-section p-top-contact">
+      <div class="l-section__inner p-top-contact__inner">
+        <div class="p-top-contact__text">
+          <h2 class="p-top-contact__title">お問い合わせ</h2>
+          <p class="p-top-contact__description">つかさんについてのお問い合わせ・資料請求はこちらから。<br>お電話もしくはメールフォームでお問い合わせを受け付けております。</p>
+        </div>
+        <div class="p-top-contact__items">
+          <div class="p-top-contact__item">
+            <figure class="p-top-contact__icon">
+              <img src="./images/icon-tel.png" alt="電話のアイコン" width="100" height="100" loading="lazy">
+            </figure>
+            <p class="p-top-contact__text">お電話でお問い合わせ</p>
+            <a class="p-top-contact__tel" href="tel:012-345-6789">012-345-6789</a>
+            <p class="p-top-contact__text">営業時間：8：30〜17：00</p>
+          </div>
+          <div class="p-top-contact__item">
+            <figure class="p-top-contact__icon">
+              <img src="./images/icon-mail.png" alt="メールのアイコン" width="100" height="100" loading="lazy">
+            </figure>
+            <p class="p-top-contact__text">メールでお問い合わせ</p>
+            <div class="c-button p-top-contact__button">
+              <a href="">メールする</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="l-section p-company">
+      <div class="l-section__inner p-company__inner">
+
+        <div class="p-company__heading">
+          <figure class="p-company__heading-image">
+            <img src="./images/company-1.png" alt="会社画像" width="742" height="331" loading="lazy">
+          </figure>
+          <div class="p-company__title-group">
+            <p class="p-company__title-en">Company</p>
+            <h2 class="p-company__title">会社案内</h2>
+          </div>
+        </div>
+
+        <p class="p-company__description">品質と革新を大切にし、建築の限界を超えたソリューションを提供します。<br>
+          安全と環境にも配慮し、持続可能な未来を築くお手伝いをいたします。<br>
+          信頼と品質で、あなたのビジョンを建築物に形にします。</p>
+
+        <div class="p-company__subtitle-group">
+          <h3 class="p-company__subtitle">代表メッセージ</h3>
+          <p class="p-company__subtitle-en">Message</p>
+        </div>
+
+        <div class="p-company__message-group">
+          <figure class="p-company__message-image">
+            <img src="./images/company-2.png" alt="代表メッセージ" width="650" height="402.73" loading="lazy">
+          </figure>
+  
+          <p class="p-company__message">
+            私たちの使命は、ただ建物を建てるだけでなく、そこに住む人々の笑顔や喜びを創造することです。<br>お一人おひとりのニーズに耳を傾け、独自のアイデアと創造力を結集して、最高の建築体験を提供いたします。<br><br>
+            品質と安全が私たちの絶え間ない努力の対象であり、お客様の信頼に応えるために常に最善を尽くします。<br>私たちはただ建物を作るだけでなく、美しさ、機能性、持続可能性を追求し、建築の芸術を創造することに情熱を傾けています。<br><br>未来への架け橋として、私たちの手がける建物は、長い年月を経ても価値を保ち続けることでしょう。<br>私たちのチームは、お客様の夢を実現するために全力で取り組み、満足度を超えた喜びを提供します。<br><br>私たちの建築は、あなたのストーリーの一部として永遠に輝き続けることを約束します。<br>共に未来を築き上げる喜びを分かち合いましょう。<br>あなたの夢の建物を創る旅を、私たちと一緒に始めてみませんか？<br><br>代表：八樹　司
+          </p>
+        </div>
+
+      </div>
+    </section>
+
+
+
 
   </main>
   <footer></footer>
