レスポンシブ

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
   <main>
 
-    <section class="l-section p-top-message">
+    <!-- <section class="l-section p-top-message">
       <div class="l-section__inner p-top-message__inner">
         <figure class="p-top-message__figure">
           <img src="./images/top-message.jpg" alt="メッセージ画像" width="1060" height="439" loading="lazy">
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="l-section p-top-contact">
       <div class="l-section__inner p-top-contact__inner">
@@ -48,7 +48,7 @@
           <p class="p-top-contact__description">つかさんについてのお問い合わせ・資料請求はこちらから。<br>お電話もしくはメールフォームでお問い合わせを受け付けております。</p>
         </div>
         <div class="p-top-contact__items">
-          <div class="p-top-contact__item">
+          <div class="p-top-contact__item p-top-contact__item--tel">
             <figure class="p-top-contact__icon">
               <img src="./images/icon-tel.png" alt="電話のアイコン" width="100" height="100" loading="lazy">
             </figure>
@@ -56,7 +56,7 @@
             <a class="p-top-contact__tel" href="tel:012-345-6789">012-345-6789</a>
             <p class="p-top-contact__text">営業時間：8：30〜17：00</p>
           </div>
-          <div class="p-top-contact__item">
+          <div class="p-top-contact__item p-top-contact__item--mail">
             <figure class="p-top-contact__icon">
               <img src="./images/icon-mail.png" alt="メールのアイコン" width="100" height="100" loading="lazy">
             </figure>
@@ -72,7 +72,7 @@
       </div>
     </section>
 
-    <section class="l-section p-company">
+    <!-- <section class="l-section p-company">
       <div class="l-section__inner p-company__inner">
         <div class="p-company__heading">
           <figure class="p-company__heading-image">
@@ -100,7 +100,7 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="l-section p-point">
       <div class="l-section__inner p-point__inner">
