会社案内レスポンシブ質問

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </section> -->
 
-    <section class="l-section p-top-contact">
+    <!-- <section class="l-section p-top-contact">
       <div class="l-section__inner p-top-contact__inner">
         <div class="p-top-contact__title-group">
           <h2 class="p-top-contact__title">お問い合わせ</h2>
@@ -70,39 +70,42 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <!-- <section class="l-section p-company">
+    <section class="l-section p-company">
       <div class="l-section__inner p-company__inner">
         <div class="p-company__heading">
           <figure class="p-company__heading-image">
             <img src="./images/company-1.png" alt="会社画像" width="742" height="331" loading="lazy">
           </figure>
           <div class="p-company__title-group">
-            <p class="p-company__title-en">Company</p>
-            <h2 class="p-company__title">会社案内</h2>
+            <span class="p-company__title-en">Company</span>
+            <h1 class="p-company__title">会社案内</h1>
           </div>
         </div>
         <p class="p-company__description">品質と革新を大切にし、建築の限界を超えたソリューションを提供します。<br>
           安全と環境にも配慮し、持続可能な未来を築くお手伝いをいたします。<br>
           信頼と品質で、あなたのビジョンを建築物に形にします。</p>
-        <div class="p-company__subtitle-group c-subtitle-group">
-          <h3 class="p-company__subtitle c-subtitle">代表メッセージ</h3>
-          <p class="p-company__subtitle-en c-subtitle-en">Message</p>
-        </div>
         <div class="p-company__message-group">
-          <figure class="p-company__message-image">
+          <div class="p-company__subtitle-group c-subtitle-group">
+            <h2 class="p-company__subtitle c-subtitle">代表メッセージ</h2>
+            <p class="p-company__subtitle-en c-subtitle-en">Message</p>
+          </div>
+          <!-- <figure class="p-company__message-image">
             <img src="./images/company-2.png" alt="代表メッセージ" width="650" height="402.73" loading="lazy">
-          </figure>
+          </figure> -->
           <p class="p-company__message">
             私たちの使命は、ただ建物を建てるだけでなく、そこに住む人々の笑顔や喜びを創造することです。<br>お一人おひとりのニーズに耳を傾け、独自のアイデアと創造力を結集して、最高の建築体験を提供いたします。<br><br>
-            品質と安全が私たちの絶え間ない努力の対象であり、お客様の信頼に応えるために常に最善を尽くします。<br>私たちはただ建物を作るだけでなく、美しさ、機能性、持続可能性を追求し、建築の芸術を創造することに情熱を傾けています。<br><br>未来への架け橋として、私たちの手がける建物は、長い年月を経ても価値を保ち続けることでしょう。<br>私たちのチームは、お客様の夢を実現するために全力で取り組み、満足度を超えた喜びを提供します。<br><br>私たちの建築は、あなたのストーリーの一部として永遠に輝き続けることを約束します。<br>共に未来を築き上げる喜びを分かち合いましょう。<br>あなたの夢の建物を創る旅を、私たちと一緒に始めてみませんか？<br><br>代表：八樹　司
+            品質と安全が私たちの絶え間ない努力の対象であり、お客様の信頼に応えるために常に最善を尽くします。<br>私たちはただ建物を作るだけでなく、美しさ、機能性、持続可能性を追求し、建築の芸術を創造することに情熱を傾けています。<br><br>未来への架け橋として、私たちの手がける建物は、長い年月を経ても価値を保ち続けることでしょう。<br>私たちのチームは、お客様の夢を実現するために全力で取り組み、満足度を超えた喜びを提供します。<br><br>私たちの建築は、あなたのストーリーの一部として永遠に輝き続けることを約束します。<br>共に未来を築き上げる喜びを分かち合いましょう。<br>あなたの夢の建物を創る旅を、私たちと一緒に始めてみませんか？<br><br><span class="p-company__message-name">代表：八樹　司</span>
           </p>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <section class="l-section p-point">
+
+
+
+    <!-- <section class="l-section p-point">
       <div class="l-section__inner p-point__inner">
         <figure class="p-point__figure-1">
           <img src="./images/point-1.jpg" alt="ポイント画像" width="650" height="455.379" loading="lazy">
@@ -130,7 +133,7 @@
         </div>
         <div class="p-point__line"></div>
       </div>
-    </section>
+    </section> -->
 
   </main>
   <footer></footer>
