会社案内修正

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <h2 class="p-company__subtitle c-subtitle">代表メッセージ</h2>
             <p class="p-company__subtitle-en c-subtitle-en">Message</p>
           </div>
-          <!-- <figure class="p-company__message-image">
+          <figure class="p-company__message-image">
             <img src="./images/company-2.png" alt="代表メッセージ" width="650" height="402.73" loading="lazy">
-          </figure> -->
+          </figure>
           <p class="p-company__message">
             私たちの使命は、ただ建物を建てるだけでなく、そこに住む人々の笑顔や喜びを創造することです。<br>お一人おひとりのニーズに耳を傾け、独自のアイデアと創造力を結集して、最高の建築体験を提供いたします。<br><br>
             品質と安全が私たちの絶え間ない努力の対象であり、お客様の信頼に応えるために常に最善を尽くします。<br>私たちはただ建物を作るだけでなく、美しさ、機能性、持続可能性を追求し、建築の芸術を創造することに情熱を傾けています。<br><br>未来への架け橋として、私たちの手がける建物は、長い年月を経ても価値を保ち続けることでしょう。<br>私たちのチームは、お客様の夢を実現するために全力で取り組み、満足度を超えた喜びを提供します。<br><br>私たちの建築は、あなたのストーリーの一部として永遠に輝き続けることを約束します。<br>共に未来を築き上げる喜びを分かち合いましょう。<br>あなたの夢の建物を創る旅を、私たちと一緒に始めてみませんか？<br><br><span class="p-company__message-name">代表：八樹　司</span>
